[tool.poetry]
name = "psp2"
version = "0.1.0"
description = ""
authors = ["Kotaro Sonoda <kotaro1976@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipykernel = "^6.13.0"
jupyterlab = "^3.3.4"
mobilechelonian = "^0.5"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
japanize-matplotlib = "^1.1.3"
jupyter = "^1.0.0"
notebook = "^6.4.11"
lxml = "^4.9.0"
tabula-py = "^2.4.0"
sympy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.20.1"

[tool.poetry.dev-dependencies]
scipy = "^1.8.1"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
