[tool.poetry]
name = "psp2"
version = "0.1.1"
description = ""
authors = ["Kotaro Sonoda <kotaro1976@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.3"
lxml = "^5.2.2"

[tool.poetry.group.qmd.dependencies]
nbclient = "^0.10.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.poetry.group.kadai.dependencies]
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
japanize-matplotlib = "^1.1.3"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
