[project]
name = "psp2"
version = "0.1.1"
description = ""
authors = [
    { name = "Kotaro Sonoda", email =  "kotaro1976@gmail.com" }
    ]
requires-python = ">= 3.12.3, < 4"
dependencies = [
    "lxml >= 5.2.2, < 6",
    "nbclient >= 0.10.0, < 1",
    "pyyaml >= 6.0.1, < 7",
    "ipykernel >= 6.29.4, < 7",
    "notebook >= 7.2.1, < 8",
    "pandas >= 2.2.2, < 3",
    "numpy >= 1.26.4, < 2",
    "matplotlib >= 3.9.0, < 4",
    "japanize-matplotlib >= 1.1.3, < 2",
    "openpyxl >= 3.1.2, < 4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/psp2"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
